--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -3,7 +3,13 @@
        padding: 0;
    }
    
-    header,
+header {
+    width: 100%;
+    height: 150px;
+    background-color: rgb(72, 179, 143);
+    color: white;
+}
+
 footer {
     width: 100%;
     height: 120px;
